<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context="com.example.muhammed.pharmacyapp.LogInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/medicine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="50dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:layout_marginStart="5dp"
                    android:hint="@string/userName"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:paddingTop="1dp"
                    android:backgroundTint="@android:color/transparent"
                    tools:ignore="RtlCompat" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/password"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignStart="@+id/password"
                    android:ems="10"
                    android:hint="@string/password"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:layout_below="@+id/view1"
                    tools:ignore="RtlCompat" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:padding="5dp"
            android:text="@string/log_in"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"
            android:background="@color/yellow"
            android:textColor="@color/white"
            android:textSize="20dp"
            />

    </LinearLayout>

</ScrollView>
