<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muhammed.pharmacyapp.AddEmployeeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:gravity="center"
            android:src="@mipmap/doctor_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/birthday"
                    android:inputType="date"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/userName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignLeft="@+id/password"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignStart="@+id/password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp">

                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/salary"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/salary"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
