<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muhammed.pharmacyapp.EditSaleBillActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:gravity="center"
            android:src="@mipmap/drugs_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/barcode"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/barcode"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/count"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/count"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/discount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_edit_text"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/discount"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPaymentWay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <Spinner
                    android:id="@+id/paymentWay"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:textSize="22dp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/editBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
